[package]
name = "mik32-minimal"
version = "0.1.0"
edition = "2024"
autobins = false

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-nb = "1.0.0"
mik32-pac = "1.1.0"
riscv = "0.16.1"
mik32-runtime = { version = "0.4.0", default-features = false, features = ["memory-default", "critical-section"] }
hal-mik32 = { version = "0.2.1" }

[[example]]
name = "gpio"
path = "examples/gpio.rs"
test = false
bench = false

[[example]]
name = "gpio-interrupt"
path = "examples/gpio_interrupt.rs"
test = false
bench = false

[[example]]
name = "gpio-button-interrupt"
path = "examples/gpio_button_interrupt.rs"
test = false
bench = false

[[example]]
name = "gpio-hal"
path = "examples/gpio_hal.rs"
test = false
bench = false

[[example]]
name = "usart"
path = "examples/usart.rs"
test = false
bench = false

[[example]]
name = "usart-dma"
path = "examples/usart_dma.rs"
test = false
bench = false

[[example]]
name = "tsens"
path = "examples/tsens.rs"
test = false
bench = false

[[example]]
name = "i2c-master"
path = "examples/i2c_master.rs"
test = false
bench = false

[[example]]
name = "i2c-slave"
path = "examples/i2c_slave.rs"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = 2
lto = true
opt-level = "s"
